force-app/main/default/objects/FNS_Bank__c/FNS_Bank__c.object-meta.xml
<CustomObject>
    <description>Start Date</description>
    <label>Bank</label>
    <nameField>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>