force-app/main/default/objects/FNS_Bank__c/fields/FNS_BankExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_BankExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Bank External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>