force-app/main/default/objects/FNS_Bank__c/fields/FNS_BankNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_BankNumber__c</fullName>
    <label>Bank Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>