force-app/main/default/objects/FNS_Bank__c/fields/FNS_BankValue__c.field-meta.xml
<CustomField>
    <fullName>FNS_BankValue__c</fullName>
    <label>Bank Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>