force-app/main/default/objects/FNS_Bank__c/fields/FNS_Branch__c.field-meta.xml
<CustomField>
    <fullName>FNS_Branch__c</fullName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>