force-app/main/default/objects/FNS_Bank__c/fields/FNS_GoverningState__c.field-meta.xml
<CustomField>
    <fullName>FNS_GoverningState__c</fullName>
    <label>Governing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>