force-app/main/default/objects/FNS_Bank__c/fields/FNS_RCNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_RCNumber__c</fullName>
    <label>RC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>