force-app/main/default/objects/FNS_Bank__c/fields/FNS_RegionNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_RegionNumber__c</fullName>
    <label>Region Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>