force-app/main/default/objects/FNS_Bank__c/recordTypes/FNS_Bank.recordType-meta.xml
<RecordType>
    <fullName>FNS_Bank</fullName>
    <active>true</active>
    <label>Bank</label>
</RecordType>