force-app/main/default/objects/FNS_Bank__c/recordTypes/FNS_BankReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_BankReadOnly</fullName>
    <active>true</active>
    <label>Bank Read Only</label>
</RecordType>