force-app/main/default/objects/FNS_Bank__c/listViews/FNS_Bank.listView-meta.xml
<ListView>
    <fullName>FNS_Bank</fullName>
    <columns>NAME</columns>
    <columns>FNS_Branch__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Banks</label>
</ListView>